# bts

./: .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  index.html  rust-toolchain  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
bts/: all.html  fn.new.html  fn.register.html  index.html  sidebar-items.js
bts/args/: enum.Command.html  index.html  sidebar-items.js  struct.Args.html  struct.NewArgs.html  struct.RegisterArgs.html
bts/error/: enum.Error.html  index.html
bts/template_name/: index.html  sidebar-items.js  struct.TemplateName.html
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/str/: trait.FromStr.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
src/: args.rs  error.rs  lib.rs  main.rs  template_name.rs  utils.rs
src/bts/: args.rs.html  error.rs.html  lib.rs.html  template_name.rs.html  utils.rs.html
tests/: acceptance.rs  utils.rs
tests/data/acceptance/new/max_depth_limit_example/.bts/templates/literature/: novel.txt
tests/data/acceptance/new/max_depth_limit_example/.bts/templates/literature/authors/english/: edgar_alan_poe.txt
tests/data/acceptance/new/multi_file_example/.bts/templates/multi_file_example/: alan_moore.txt
tests/data/acceptance/register/append/: cats.txt
tests/data/acceptance/register/append/dogs/: golden_retriever.txt
tests/data/acceptance/register/overwrite/c_plus_plus/: language.txt
tests/data/acceptance/register/overwrite/rust/: language.txt
tests/data/acceptance/register/single_file/: easter_island.txt
tests/data/acceptance/register/whole_directory/: frigate.txt  full_rigged_pinnace.txt
tests/data/expected/new/deep_copy_example/: wilhelm_scream.txt
tests/data/expected/register/append/templates/animals/domestic/: husky.txt
