[package]
name = "bts"
version = "0.3.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
edition = "2018"
description = "Simple template spawner"
readme = "README.md"
license = "MIT"
documentation = "https://luke-biel.github.io/bts"
homepage = "https://github.com/luke-biel/bts"
repository = "https://github.com/luke-biel/bts"

[badges]
travis-ci = { repository = "luke-biel/bts", branch = "master" }

[[bin]]
doctest = false
path = "src/main.rs"
name = "bts"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
structopt = { version = "0.3.17", default-features = false }
dirs      = "3.0.1"

[dev-dependencies]
test-case = "1.0.0"
dir-assert = "0.2.0"
